fix: make adversary and character page both resizeable and scroll able; fix overflow issue in adversary page. (#283)

--- a/styles/less/actors/adversary/sheet.less
+++ b/styles/less/actors/adversary/sheet.less
@@ -5,7 +5,7 @@
     .window-content {
         display: grid;
         grid-template-columns: 275px 1fr;
-        grid-template-rows: 283px 1fr;
+        grid-template-rows: auto 1fr;
         gap: 15px 0;
         height: 100%;
         width: 100%;
