--- a/styles/less/actors/character/sheet.less
+++ b/styles/less/actors/character/sheet.less
@@ -5,10 +5,11 @@
     .window-content {
         display: grid;
         grid-template-columns: 275px 1fr;
-        grid-template-rows: 283px 1fr;
+        grid-template-rows: auto 1fr;
         gap: 15px 0;
         height: 100%;
         width: 100%;
+        overflow: auto;
 
         .character-sidebar-sheet {
             grid-row: 1 / span 2;
